--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </select>
 
     <div class="buttonKey">
-        <button class="a">A</button>
-        <button class="s">S</button>
-        <button class="d">D</button>
-        <button class="j">J</button>
-        <button class="k">K</button>
-        <button class="l">L</button>
+        <button class="a kirarNote">A</button>
+        <button class="s kirarNote">S</button>
+        <button class="d kirarNote">D</button>
+        <button class="j kirarNote">J</button>
+        <button class="k kirarNote">K</button>
+        <button class="l kirarNote">L</button>
     </div>
     <footer>&copy; Biniyam</footer>
 
-
+<script src="./index.js"></script>
 
 </body>
 
