worked on tunning option

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Lets Play Kirar</h1>
-    <select name="category" id="tune-type">
+    <select id="tune-list" onchange="getSelectValue();">
         <option value="tizita">Tizita</option>
         <option value="bati">Bati</option>
     </select>
