cleaned up on the javascript

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body>
     <h1>Lets Play Kirar</h1>
     <select id="tune-list" onchange="getSelectValue();">
-        <option value="tizita">Tizita</option>
-        <option value="bati">Bati</option>
+        <option value="Tizita">Tizita</option>
+        <option value="Bati">Bati</option>
     </select>
 
     <div class="buttonKey">
-        <button class="a kirarNote">A</button>
-        <button class="s kirarNote">S</button>
-        <button class="d kirarNote">D</button>
-        <button class="j kirarNote">J</button>
-        <button class="k kirarNote">K</button>
-        <button class="l kirarNote">L</button>
+        <button class="a kirarNote">a</button>
+        <button class="s kirarNote">s</button>
+        <button class="d kirarNote">d</button>
+        <button class="j kirarNote">j</button>
+        <button class="k kirarNote">k</button>
+        <button class="l kirarNote">l</button>
     </div>
     <footer>&copy; Biniyam</footer>
 
