managed to get option selection to work

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
 <body>
     <h1>Lets Play Kirar</h1>
-    <select id="tune-list" onchange="getSelectValue();">
+    <select id="tuneList" name="tuneList" onchange="getSelectedValue();">
+        <option value=""></option>
         <option value="Tizita">Tizita</option>
         <option value="Bati">Bati</option>
     </select>
+
+    
 
     <div class="buttonKey">
         <button class="a kirarNote">a</button>
